--- a/index.html
+++ b/index.html
@@ -10,5 +10,23 @@
 </head>
 <body>
     
+    <header>
+        <div class="logo">
+            <img src="/img/logos/default.png" alt="">
+        </div>
+        <div class="menu">
+            <ul>
+                <a href="#">
+                    <li>Home</li>
+                </a>
+                <a href="#">
+                    <li>Home</li>
+                </a>
+                <a href="#">
+                    <li>Home</li>
+                </a>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
