--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/jpg" href="/img/favicons/favicon.ico"/>
-    <link rel="stylesheet" href="css/style.css">
-    <title>Home | Calculator Complex</title>
-</head>
-<body>
-    
-    <header>
-        <div class="logo">
-            <img src="/img/logos/default.png" alt="">
-        </div>
-        <div class="menu">
-            <ul>
-                <a href="#">
-                    <li>Home</li>
-                </a>
-                <a href="#">
-                    <li>Home</li>
-                </a>
-                <a href="#">
-                    <li>Home</li>
-                </a>
-            </ul>
-        </div>
-    </header>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="shortcut icon"
+			type="image/jpg"
+			href="/img/favicons/favicon.ico"
+		/>
+		<link rel="stylesheet" href="css/style.css" />
+		<title>Home | Calculator Complex</title>
+	</head>
+	<body>
+        <!-- Header -->
+		<header>
+			<div class="logo">
+				<img src="/img/logos/default.png" alt="" />
+			</div>
+			<div class="menu">
+				<a href="#"> Home </a>
+				<a href="#"> Resources </a>
+				<a href="#"> Contact Me </a>
+			</div>
+		</header>
+
+        <!-- Home Page -->
+        <section>
+            
+        </section>
+
+	</body>
 </html>
