--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link
+			rel="stylesheet"
+			href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+		/>
+		<link
 			rel="shortcut icon"
 			type="image/jpg"
 			href="/img/favicons/favicon.ico"
@@ -13,7 +17,7 @@
 		<title>Home | Calculator Complex</title>
 	</head>
 	<body>
-        <!-- Header -->
+		<!-- Header -->
 		<header>
 			<div class="logo">
 				<img src="/img/logos/default.png" alt="" />
@@ -21,14 +25,22 @@
 			<div class="menu">
 				<a href="#"> Home </a>
 				<a href="#"> Resources </a>
-				<a href="#"> Contact Me </a>
+                <span>
+				    <a href="#" class="btn-accent"> Contact Me </a>
+                </span>
 			</div>
 		</header>
 
-        <!-- Home Page -->
-        <section>
-            
+		<!-- Home Page -->
+		<section>
+            <div class="container">
+                <div class="title">
+                    <h1>Welcome To Calculator Complex</h1>
+                </div>
+                <div class="subtitle">
+                    Find the solutions to mathematical and statistical formulas
+                </div>
+            </div>
         </section>
-
 	</body>
 </html>
