--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link
+			href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+			rel="stylesheet"
+			id="bootstrap-css"
+		/>
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+		<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+		<link
 			rel="stylesheet"
 			href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
 		/>
@@ -25,22 +32,107 @@
 			<div class="menu">
 				<a href="#"> Home </a>
 				<a href="#"> Resources </a>
-                <span>
-				    <a href="#" class="btn-accent"> Contact Me </a>
-                </span>
+				<span>
+					<a href="#" class="btn-accent"> Contact Me </a>
+				</span>
 			</div>
 		</header>
 
 		<!-- Home Page -->
-		<section>
-            <div class="container">
-                <div class="title">
-                    <h1>Welcome To Calculator Complex</h1>
+		<section class="home">
+			<div class="container">
+				<div class="title">
+					<h1>Welcome To Calculator Complex</h1>
+				</div>
+				<div class="subtitle">
+					Find the solutions to mathematical and statistical formulas
+				</div>
+			</div>
+		</section>
+
+		<!-- Resources Page -->
+		<section class="resources ">
+			<div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="card card-margin">
+                            <div class="card-header no-border">
+                                <h5 class="card-title">STATISTICS</h5> 
+                            </div>
+                            <div class="card-body pt-0">
+                                <div class="resource">
+                                    <div class="resource-title-wrapper">
+                                        <div class="resource-primary">
+                                            <span class="resource-number">01</span>
+                                            
+                                        </div>
+                                        <div class="resource-info">
+                                            <span class="resource-title">Formulas</span>
+                                        </div>
+                                    </div>
+                                    <p class="mx-3">
+                                        See the available Statistics formulas
+                                    </p>
+                                    <div class="resource-meeting-action">
+                                        <a href="#" class="btn btn-sm btn-flash-border-primary">View All</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card card-margin">
+                            <div class="card-header no-border">
+                                <h5 class="card-title">SCIENCE</h5>
+                            </div>
+                            <div class="card-body pt-0">
+                                <div class="resource">
+                                    <div class="resource-title-wrapper">
+                                        <div class="resource-warning">
+                                            <span class="resource-number">02</span>
+                                            
+                                        </div>
+                                        <div class="resource-info">
+                                            <span class="resource-title">Formulas</span>
+                                        </div>
+                                    </div>
+                                    <p class="mx-3">
+                                        Lorem ipsum dolor sit amet.
+                                    </p>
+                                    <div class="resource-meeting-action">
+                                        <a href="#" class="btn btn-sm btn-flash-border-warning">View All</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card card-margin">
+                            <div class="card-header no-border">
+                                <h5 class="card-title">MATHEMATICS</h5>
+                            </div>
+                            <div class="card-body pt-0">
+                                <div class="resource">
+                                    <div class="resource-title-wrapper">
+                                        <div class="resource-success">
+                                            <span class="resource-number">03</span>
+                                        </div>
+                                        <div class="resource-info">
+                                            <span class="resource-title">Formulas</span>
+                                        </div>
+                                    </div>
+                                    <p class="mx-3">
+                                        Lorem ipsum dolor sit amet.
+                                    </p>
+                                    <div class="resource-meeting-action">
+                                        <a href="#" class="btn btn-sm btn-flash-border-success">View All</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="subtitle">
-                    Find the solutions to mathematical and statistical formulas
                 </div>
-            </div>
-        </section>
+		</section>
 	</body>
 </html>
