--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 			</div>
 			<div class="menu">
 				<a href="#"> Home </a>
-				<a href="#"> Resources </a>
+				<a href="#resources"> Resources </a>
 				<span>
-					<a href="#" class="btn-accent"> Contact Me </a>
+					<a href="#contact" class="btn-accent"> Contact Me </a>
 				</span>
 			</div>
 		</header>
@@ -51,7 +51,7 @@
 		</section>
 
 		<!-- Resources Page -->
-		<section class="resources ">
+		<section class="resources " id="resources">
 			<div class="container">
                 <div class="row">
                     <div class="col-lg-4">
@@ -63,7 +63,9 @@
                                 <div class="resource">
                                     <div class="resource-title-wrapper">
                                         <div class="resource-primary">
-                                            <span class="resource-number">01</span>
+                                            <span class="resource-number">
+                                                <i class="lar la-chart-bar"></i>
+                                            </span>
                                             
                                         </div>
                                         <div class="resource-info">
@@ -89,7 +91,9 @@
                                 <div class="resource">
                                     <div class="resource-title-wrapper">
                                         <div class="resource-warning">
-                                            <span class="resource-number">02</span>
+                                            <span class="resource-number">
+                                                <i class="las la-atom"></i>
+                                            </span>
                                             
                                         </div>
                                         <div class="resource-info">
@@ -97,7 +101,7 @@
                                         </div>
                                     </div>
                                     <p class="mx-3">
-                                        Lorem ipsum dolor sit amet.
+                                       See the available Science formulas
                                     </p>
                                     <div class="resource-meeting-action">
                                         <a href="#" class="btn btn-sm btn-flash-border-warning">View All</a>
@@ -115,14 +119,16 @@
                                 <div class="resource">
                                     <div class="resource-title-wrapper">
                                         <div class="resource-success">
-                                            <span class="resource-number">03</span>
+                                            <span class="resource-number">
+                                                <i class="las la-divide"></i>
+                                            </span>
                                         </div>
                                         <div class="resource-info">
                                             <span class="resource-title">Formulas</span>
                                         </div>
                                     </div>
                                     <p class="mx-3">
-                                        Lorem ipsum dolor sit amet.
+                                        See the available Math formulas
                                     </p>
                                     <div class="resource-meeting-action">
                                         <a href="#" class="btn btn-sm btn-flash-border-success">View All</a>
@@ -134,5 +140,47 @@
                 </div>
                 </div>
 		</section>
+
+        <section class="contact" id="contact">
+            <div class="container">
+                <div class="contact-title">
+                   <h1>Contact Me</h1>
+                </div>
+                <div class="contact-subtitle">
+                    <p class="text-light">
+                        Do you have any formula suggestions or do you want to get in touch? You can reach me on the following platforms
+                    </p>
+                </div>
+                <div class="social-icons">
+                    <div class="social-icon">
+                        <a href="#">
+                            <i class="lab la-linkedin-in"></i>
+                        </a>
+                    </div>
+
+                    <div class="social-icon">
+                        <a href="#">
+                            <i class="lab la-whatsapp"></i>
+                        </a>
+                    </div>
+
+                    <div class="social-icon">
+                        <a href="#">
+                            <i class="lab la-telegram"></i>
+                        </a>
+                    </div>
+
+                    <div class="social-icon">
+                        <a href="#">
+                            <i class="lab la-instagram"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            s,jdhfsj
+        </footer>
 	</body>
 </html>
