--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="#"
+											href="/statistics-formulas.html"
 											class="btn btn-sm btn-flash-border-primary"
 											>View All</a
 										>
