--- a/statistics-formulas.html
+++ b/statistics-formulas.html
@@ -23,6 +23,9 @@
 	</head>
     <body>
         
+        <div class="container d-flex justify-content-center align-items-center my-5 ">
+            <a href="/index.html" class="btn btn-primary">Back To Home</a>
+        </div>
 
         <section class="formulas my-5" id="formulas">
 			<div class="container">
@@ -52,7 +55,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="stats/mean.html"
+											href="/mean.html"
 											class="btn btn-sm btn-flash-border-primary"
 											>calculate</a
 										>
@@ -85,7 +88,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="/stats/median.html"
+											href="//median.html"
 											class="btn btn-sm btn-flash-border-warning"
 											>calculate</a
 										>
@@ -118,7 +121,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="/stats/mode.html"
+											href="//mode.html"
 											class="btn btn-sm btn-flash-border-success"
 											>calculate</a
 										>
@@ -155,7 +158,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="/stats/variance.html"
+											href="//variance.html"
 											class="btn btn-sm btn-flash-border-primary"
 											>calculate</a
 										>
@@ -188,7 +191,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="/stats/standard-dev.html"
+											href="//standard-dev.html"
 											class="btn btn-sm btn-flash-border-warning"
 											>calculate</a
 										>
@@ -221,7 +224,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="/stats/permutation.html"
+											href="//permutation.html"
 											class="btn btn-sm btn-flash-border-success"
 											>calculate</a
 										>
@@ -258,7 +261,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="/stats/combination.html"
+											href="//combination.html"
 											class="btn btn-sm btn-flash-border-primary"
 											>calculate</a
 										>
@@ -287,11 +290,11 @@
 										</div>
 									</div>
 									<p class="mx-3">
-										It can be thought of as simply the probability of a SUCCESS or FAILURE outcome in an experiment or survey that is repeated multiple times
+										It is the probability of a SUCCESS or FAILURE outcome in an experiment or survey that is repeated multiple times
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="/stats/binomial.html"
+											href="//binomial.html"
 											class="btn btn-sm btn-flash-border-warning"
 											>calculate</a
 										>
@@ -315,7 +318,7 @@
 										</div>
 										<div class="resource-info">
 											<span class="resource-title"
-												>Formulas</span
+												>What is Poisson Distribution</span
 											>
 										</div>
 									</div>
@@ -324,7 +327,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="/stats/poisson.html"
+											href="//poisson.html"
 											class="btn btn-sm btn-flash-border-success"
 											>calculate</a
 										>
