--- a/mean.html
+++ b/mean.html
@@ -42,7 +42,7 @@
 											<h3 class="h4 font-weight-bold text-theme">Mean</h3>
 										</div>
 		
-										<h6 class="h5 mb-0">Calculate</h6>
+										<h6 class="h5 mb-0 text-center">Calculate</h6>
 										<p class="text-muted mt-2 mb-5">Enter the data set separated by commas(,) and click the button to
 											get your mean. For example: <span class="text-primary">2,4,6,8</span>
 										</p>
