--- a/statistics-formulas.html
+++ b/statistics-formulas.html
@@ -88,7 +88,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="//median.html"
+											href="/median.html"
 											class="btn btn-sm btn-flash-border-warning"
 											>calculate</a
 										>
