--- a/median.html
+++ b/median.html
@@ -19,7 +19,7 @@
 			href="/img/favicons/favicon.ico"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title> Mean | Calculator Complex</title>
+		<title> Median | Calculator Complex</title>
 
         
 	</head>
