--- a/statistics-formulas.html
+++ b/statistics-formulas.html
@@ -121,7 +121,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="//mode.html"
+											href="/mode.html"
 											class="btn btn-sm btn-flash-border-success"
 											>calculate</a
 										>
