--- a/index.html
+++ b/index.html
@@ -202,20 +202,20 @@
 						
 						<p>
 							If you are a developer like I am and you would like to contribute to
-                            this project you can check out my github. Also, if you would like to work on 
+                            this project you can check out my github <span class="text-muted">(Link is provided in the icon)</span> . Also, if you would like to work on 
                             similar projects, you can contact me as well.
 						</p>
 
                         <p>
-                            Also, check out my portfolio
+                            Also, check out my portfolio in the external link below
                         </p>
 
                         <div class="ext-link">
-                            <a href="https://github.com/neophyte-programmer" class="text-dark">
+                            <a href="https://github.com/neophyte-programmer" class="text-dark" target="_blank">
                                 <i class="lab la-github"></i>
                             </a>
 
-                            <a href="https://nutifafasportfolio.netlify.app/" class="text-dark">
+                            <a href="https://nutifafasportfolio.netlify.app/" class="text-dark" target="_blank">
                                 <i class="las la-external-link-alt"></i>
                             </a>
                         </div>
