--- a/mode.html
+++ b/mode.html
@@ -77,7 +77,12 @@
 						</div>
 					</div>
 		
-					
+                    <div class="my-3 alert alert-warning alert-dismissible fade show alert-bottom" role="alert">
+                        This function does not work for data sets with multiple modes
+                        <button type="button" class="btn btn-outline-warning"  data-bs-dismiss="alert" aria-label="Close">
+                            <i class="las la-times" ></i>
+                        </button>
+                      </div>
 		
 				</div>
 			</div>
@@ -87,5 +92,7 @@
       
 
         <script src="/js/mode.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
