--- a/statistics-formulas.html
+++ b/statistics-formulas.html
@@ -158,7 +158,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="//variance.html"
+											href="/variance.html"
 											class="btn btn-sm btn-flash-border-primary"
 											>calculate</a
 										>
