--- a/statistics-formulas.html
+++ b/statistics-formulas.html
@@ -191,7 +191,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="//standard-dev.html"
+											href="/standard-dev.html"
 											class="btn btn-sm btn-flash-border-warning"
 											>calculate</a
 										>
