--- a/statistics-formulas.html
+++ b/statistics-formulas.html
@@ -224,7 +224,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="//permutation.html"
+											href="/permutation.html"
 											class="btn btn-sm btn-flash-border-success"
 											>calculate</a
 										>
