--- a/statistics-formulas.html
+++ b/statistics-formulas.html
@@ -261,7 +261,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="//combination.html"
+											href="/combination.html"
 											class="btn btn-sm btn-flash-border-primary"
 											>calculate</a
 										>
