--- a/statistics-formulas.html
+++ b/statistics-formulas.html
@@ -294,7 +294,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="//binomial.html"
+											href="/binomial.html"
 											class="btn btn-sm btn-flash-border-warning"
 											>calculate</a
 										>
@@ -327,7 +327,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="//poisson.html"
+											href="/poisson.html"
 											class="btn btn-sm btn-flash-border-success"
 											>calculate</a
 										>
