--- a/binomial.html
+++ b/binomial.html
@@ -19,7 +19,7 @@
 			href="/img/favicons/favicon.ico"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title> Poisson Dist. | Calculator Complex</title>
+		<title> Binomial Dist. | Calculator Complex</title>
 
         
 	</head>
@@ -39,7 +39,7 @@
 								<div class="col-lg-6">
 									<div class="p-5">
 										<div class="mb-5">
-											<h3 class="h4 font-weight-bold text-theme">Poisson Distribution</h3>
+											<h3 class="h4 font-weight-bold text-theme">Binomial Distribution</h3>
 										</div>
 		
 										<h6 class="h5 mb-0 text-center">Calculate</h6>
