--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="#"
+											href="/science-formulas.html"
 											class="btn btn-sm btn-flash-border-warning"
 											>View All</a
 										>
