--- a/science-formulas.html
+++ b/science-formulas.html
@@ -262,7 +262,7 @@
 										</div>
 									</div>
 									<p class="mx-3">
-										The mole is the amount of substance of a system which contains as many elementary entities as there are atoms in 0.012 kilogram of carbon 12; its symbol is “mol”.
+										The mole is the amount of substance of a system which contains as many elementary entities as there are atoms in 0.012 kilogram of carbon 12.
 									</p>
 									<div class="resource-meeting-action">
 										<a
@@ -299,7 +299,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="/binomial.html"
+											href="/speed.html"
 											class="btn btn-sm btn-flash-border-primary"
 											>calculate</a
 										>
@@ -311,7 +311,7 @@
 					<div class="col-lg-4">
 						<div class="card card-margin">
 							<div class="card-header no-border">
-								<h5 class="card-title">Poisson Distribution</h5>
+								<h5 class="card-title">Acceleration</h5>
 							</div>
 							<div class="card-body pt-0">
 								<div class="resource">
@@ -323,16 +323,16 @@
 										</div>
 										<div class="resource-info">
 											<span class="resource-title"
-												>What is Poisson Distribution</span
+												>What is Acceleration</span
 											>
 										</div>
 									</div>
 									<p class="mx-3">
-										A discrete distribution that measures the probability of a given number of events happening in a specified time period.
+										Acceleration is the rate of change of the velocity of an object with respect to time.
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="/poisson.html"
+											href="/acceleration.html"
 											class="btn btn-sm btn-flash-border-success"
 											>calculate</a
 										>
