--- a/energy.html
+++ b/energy.html
@@ -44,7 +44,7 @@
 		
 										<h6 class="h5 mb-0 ">Calculate</h6>
 										<p class="text-muted mt-2 mb-5">
-                                            Enter the values for <span class="text-primary">F</span> <span class="text-dark">(mass)</span>
+                                            Enter the value for <span class="text-primary">m</span> <span class="text-dark">(mass)</span>
 										</p>
 		
                                             <div class="container-fluid row permutation-box">
