--- a/work.html
+++ b/work.html
@@ -42,8 +42,10 @@
 											<h3 class="h4 font-weight-bold text-theme">Work</h3>
 										</div>
 		
-										<h6 class="h5 mb-0 text-center">Calculate</h6>
+										<h6 class="h5 mb-0">Calculate</h6>
 										<p class="text-muted mt-2 mb-5">
+											The formula for Work in this calculator is given as 
+											" W = F * d "<br>
                                             Enter the values for <span class="text-primary">F</span> <span class="text-dark">(Force)</span>
                                             and <span class="text-primary">d</span> <span class="text-dark">(distance)</span>
 										</p>
