--- a/speed.html
+++ b/speed.html
@@ -44,8 +44,8 @@
 		
 										<h6 class="h5 mb-0 text-center">Calculate</h6>
 										<p class="text-muted mt-2 mb-5">
-                                            Enter the values for <span class="text-primary">t</span> <span class="text-dark">(time elapsed)</span>
-                                            and <span class="text-primary">d</span> <span class="text-dark">(distance travelled)</span>
+                                            Enter the values for <span class="text-primary">t</span> <span class="text-dark">(time elapsed in seconds)</span>
+                                            and <span class="text-primary">d</span> <span class="text-dark">(distance travelled in metres)</span>
 										</p>
 		
                                             <div class="container-fluid row permutation-box">
