--- a/acceleration.html
+++ b/acceleration.html
@@ -78,9 +78,9 @@
 									<div class="account-block rounded-right">
 										<div class="overlay rounded-right"></div>
 										<div class="account-testimonial bg-dark p-1">
-											<h4 class="text-white mb-4">What is Work?</h4>
+											<h4 class="text-white mb-4">What is Acceleration?</h4>
 											<p class="lead text-white">
-												In physics, work is the energy transferred to or from an object via the application of force along a displacement.
+												Acceleration is the rate of change of the velocity of an object with respect to time.
 											</p>
 										</div>
 									</div>
