--- a/index.html
+++ b/index.html
@@ -169,26 +169,26 @@
 				</div>
 				<div class="social-icons">
 					<div class="social-icon">
-						<a href="#">
+						<a href="https://www.linkedin.com/in/neophyteprogrammer" target="_blank">
 							<i class="lab la-linkedin-in"></i>
 						</a>
 					</div>
 
 					<div class="social-icon">
-						<a href="#">
+						<a href="https://wa.me/+233502297337" target="_blank">
 							<i class="lab la-whatsapp"></i>
 						</a>
 					</div>
 
 					<div class="social-icon">
-						<a href="#">
+						<a href="https://t.me/sayaprayer" target="_blank">
 							<i class="lab la-telegram"></i>
 						</a>
 					</div>
 
 					<div class="social-icon">
-						<a href="#">
-							<i class="lab la-instagram"></i>
+						<a href="http://twitter.com/Nutifafa18" target="_blank">
+							<i class="lab la-twitter"></i>
 						</a>
 					</div>
 				</div>
