--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 									</p>
 									<div class="resource-meeting-action">
 										<a
-											href="#"
+											href="/math-formulas.html"
 											class="btn btn-sm btn-flash-border-success"
 											>View All</a
 										>
