--- a/index.html
+++ b/index.html
@@ -1,248 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-			rel="stylesheet"
-			id="bootstrap-css"
-		/>
-		<link
-			rel="stylesheet"
-			href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
-		/>
-		<link
-			rel="shortcut icon"
-			type="image/jpg"
-			href="/img/favicons/favicon.ico"
-		/>
-		<link rel="stylesheet" href="css/style.css" />
-		<title>Home | Calculator Complex</title>
-	</head>
-	<body>
-		<!-- Header -->
-		<header>
-			<div class="logo">
-				<img src="/img/logos/default.png" alt="" />
-			</div>
-			<div class="menu">
-				<a href="#"> Home </a>
-				<a href="#resources"> Resources </a>
-				<span>
-					<a href="#contact" class="btn-accent"> Contact Me </a>
-				</span>
-			</div>
-		</header>
 
-		<!-- Home Page -->
-		<section class="home">
-			<div class="container">
-				<div class="title">
-					<h1>Welcome To Calculator Complex</h1>
-				</div>
-				<div class="subtitle">
-					Find the solutions to mathematical and statistical formulas
-				</div>
-			</div>
-		</section>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
+	<link rel="stylesheet"
+		href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
+	<link rel="shortcut icon" type="image/jpg" href="/img/favicons/favicon.ico" />
+	<link rel="stylesheet" href="css/style.css" />
+	<title>Home | Calculator Complex</title>
+</head>
 
-		<!-- Resources Page -->
-		<section class="resources my-5" id="resources">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-4">
-						<div class="card card-margin">
-							<div class="card-header no-border">
-								<h5 class="card-title">STATISTICS</h5>
-							</div>
-							<div class="card-body pt-0">
-								<div class="resource">
-									<div class="resource-title-wrapper">
-										<div class="resource-primary">
-											<span class="resource-number">
-												<i class="lar la-chart-bar"></i>
-											</span>
-										</div>
-										<div class="resource-info">
-											<span class="resource-title"
-												>Formulas</span
-											>
-										</div>
+<body>
+	<!-- Header -->
+	<header>
+		<div class="logo">
+			<img src="/img/logos/default.png" alt="" />
+		</div>
+		<div class="menu">
+			<a href="#"> Home </a>
+			<a href="#resources"> Resources </a>
+			<span>
+				<a href="#contact" class="btn-accent"> Contact Me </a>
+			</span>
+		</div>
+	</header>
+
+	<!-- Home Page -->
+	<section class="home">
+		<div class="container">
+			<div class="title">
+				<h1>Welcome To Calculator Complex</h1>
+			</div>
+			<div class="subtitle">
+				Find the solutions to mathematical and statistical formulas
+			</div>
+		</div>
+	</section>
+
+	<!-- Resources Page -->
+	<section class="resources my-5" id="resources">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-4">
+					<div class="card card-margin">
+						<div class="card-header no-border">
+							<h5 class="card-title">STATISTICS</h5>
+						</div>
+						<div class="card-body pt-0">
+							<div class="resource">
+								<div class="resource-title-wrapper">
+									<div class="resource-primary">
+										<span class="resource-number">
+											<i class="lar la-chart-bar"></i>
+										</span>
 									</div>
-									<p class="mx-3">
-										See the available Statistics formulas
-									</p>
-									<div class="resource-meeting-action">
-										<a
-											href="/statistics-formulas.html"
-											class="btn btn-sm btn-flash-border-primary"
-											>View All</a
-										>
+									<div class="resource-info">
+										<span class="resource-title">Formulas</span>
 									</div>
+								</div>
+								<p class="mx-3">
+									See the available Statistics formulas
+								</p>
+								<div class="resource-meeting-action">
+									<a href="/statistics-formulas.html" class="btn btn-sm btn-flash-border-primary">View
+										All</a>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4">
-						<div class="card card-margin">
-							<div class="card-header no-border">
-								<h5 class="card-title">SCIENCE</h5>
-							</div>
-							<div class="card-body pt-0">
-								<div class="resource">
-									<div class="resource-title-wrapper">
-										<div class="resource-warning">
-											<span class="resource-number">
-												<i class="las la-atom"></i>
-											</span>
-										</div>
-										<div class="resource-info">
-											<span class="resource-title"
-												>Formulas</span
-											>
-										</div>
+				</div>
+				<div class="col-lg-4">
+					<div class="card card-margin">
+						<div class="card-header no-border">
+							<h5 class="card-title">SCIENCE</h5>
+						</div>
+						<div class="card-body pt-0">
+							<div class="resource">
+								<div class="resource-title-wrapper">
+									<div class="resource-warning">
+										<span class="resource-number">
+											<i class="las la-atom"></i>
+										</span>
 									</div>
-									<p class="mx-3">
-										See the available Science formulas
-									</p>
-									<div class="resource-meeting-action">
-										<a
-											href="/science-formulas.html"
-											class="btn btn-sm btn-flash-border-warning"
-											>View All</a
-										>
+									<div class="resource-info">
+										<span class="resource-title">Formulas</span>
 									</div>
+								</div>
+								<p class="mx-3">
+									See the available Science formulas
+								</p>
+								<div class="resource-meeting-action">
+									<a href="/science-formulas.html" class="btn btn-sm btn-flash-border-warning">View
+										All</a>
 								</div>
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4">
-						<div class="card card-margin">
-							<div class="card-header no-border">
-								<h5 class="card-title">MATHEMATICS</h5>
-							</div>
-							<div class="card-body pt-0">
-								<div class="resource">
-									<div class="resource-title-wrapper">
-										<div class="resource-success">
-											<span class="resource-number">
-												<i class="las la-divide"></i>
-											</span>
-										</div>
-										<div class="resource-info">
-											<span class="resource-title"
-												>Formulas</span
-											>
-										</div>
+				</div>
+				<div class="col-lg-4">
+					<div class="card card-margin">
+						<div class="card-header no-border">
+							<h5 class="card-title">MATHEMATICS</h5>
+						</div>
+						<div class="card-body pt-0">
+							<div class="resource">
+								<div class="resource-title-wrapper">
+									<div class="resource-success">
+										<span class="resource-number">
+											<i class="las la-divide"></i>
+										</span>
 									</div>
-									<p class="mx-3">
-										See the available Math formulas
-									</p>
-									<div class="resource-meeting-action">
-										<a
-											href="/math-formulas.html"
-											class="btn btn-sm btn-flash-border-success"
-											>View All</a
-										>
+									<div class="resource-info">
+										<span class="resource-title">Formulas</span>
 									</div>
+								</div>
+								<p class="mx-3">
+									See the available Math formulas
+								</p>
+								<div class="resource-meeting-action">
+									<a href="/math-formulas.html" class="btn btn-sm btn-flash-border-success">View
+										All</a>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
+	</section>
 
-		<section class="contact" id="contact">
-			<div class="container">
-				<div class="contact-title">
-					<h1>Contact Me</h1>
+	<section class="contact" id="contact">
+		<div class="container">
+			<div class="contact-title">
+				<h1>Contact Me</h1>
+			</div>
+			<div class="contact-subtitle">
+				<p class="text-light">
+					Do you have any formula suggestions or do you want to
+					get in touch? You can reach me on the following
+					platforms
+				</p>
+			</div>
+			<div class="social-icons">
+				<div class="social-icon">
+					<a href="https://www.linkedin.com/in/neophyteprogrammer" target="_blank">
+						<i class="lab la-linkedin-in"></i>
+					</a>
 				</div>
-				<div class="contact-subtitle">
-					<p class="text-light">
-						Do you have any formula suggestions or do you want to
-						get in touch? You can reach me on the following
-						platforms
+
+				<div class="social-icon">
+					<a href="https://wa.me/+233502297337" target="_blank">
+						<i class="lab la-whatsapp"></i>
+					</a>
+				</div>
+
+				<div class="social-icon">
+					<a href="https://t.me/sayaprayer" target="_blank">
+						<i class="lab la-telegram"></i>
+					</a>
+				</div>
+
+				<div class="social-icon">
+					<a href="http://twitter.com/Nutifafa18" target="_blank">
+						<i class="lab la-twitter"></i>
+					</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer class="bg-light text-center text-lg-start">
+		<div class="container p-4">
+			<div class="row">
+				<div class="col-lg-6 col-md-12 mb-4 mb-md-0 footer-text">
+
+					<p>
+						If you are a developer like I am and you would like to contribute to
+						this project you can check out my github <span class="text-muted">(Link is provided in the
+							icon)</span> . Also, if you would like to work on
+						similar projects, you can contact me as well.
 					</p>
-				</div>
-				<div class="social-icons">
-					<div class="social-icon">
-						<a href="https://www.linkedin.com/in/neophyteprogrammer" target="_blank">
-							<i class="lab la-linkedin-in"></i>
-						</a>
-					</div>
 
-					<div class="social-icon">
-						<a href="https://wa.me/+233502297337" target="_blank">
-							<i class="lab la-whatsapp"></i>
-						</a>
-					</div>
+					<p>
+						Also, check out my portfolio in the external link below
+					</p>
 
-					<div class="social-icon">
-						<a href="https://t.me/sayaprayer" target="_blank">
-							<i class="lab la-telegram"></i>
+					<div class="ext-link">
+						<a href="https://github.com/neophyte-programmer" class="text-dark" target="_blank">
+							<i class="lab la-github"></i>
 						</a>
-					</div>
 
-					<div class="social-icon">
-						<a href="http://twitter.com/Nutifafa18" target="_blank">
-							<i class="lab la-twitter"></i>
+						<a href="https://nutifafasportfolio.netlify.app/" class="text-dark" target="_blank">
+							<i class="las la-external-link-alt"></i>
 						</a>
 					</div>
 				</div>
-			</div>
-		</section>
 
-		<footer class="bg-light text-center text-lg-start">
-			<div class="container p-4">
-				<div class="row">
-					<div class="col-lg-6 col-md-12 mb-4 mb-md-0 footer-text">
-						
-						<p>
-							If you are a developer like I am and you would like to contribute to
-                            this project you can check out my github <span class="text-muted">(Link is provided in the icon)</span> . Also, if you would like to work on 
-                            similar projects, you can contact me as well.
-						</p>
-
-                        <p>
-                            Also, check out my portfolio in the external link below
-                        </p>
-
-                        <div class="ext-link">
-                            <a href="https://github.com/neophyte-programmer" class="text-dark" target="_blank">
-                                <i class="lab la-github"></i>
-                            </a>
-
-                            <a href="https://nutifafasportfolio.netlify.app/" class="text-dark" target="_blank">
-                                <i class="las la-external-link-alt"></i>
-                            </a>
-                        </div>
-					</div>
-
-					<div class="col-lg-6 col-md-12 mb-4 mb-md-0">
-						<img src="/img/logos/default.png" class="img-fluid logo" alt="">
-					</div>
+				<div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+					<img src="/img/logos/default.png" class="img-fluid logo" alt="">
 				</div>
 			</div>
+		</div>
 
-			<div class="text-center p-3 strip">
-                ©  <span id="copyright-year"></span> Copyright:
-				<a class="" href="https://nutifafasportfolio.netlify.app/" target="_blank">
-                    Nutifafa Afi Attor
-                    </a>
-                    <p>
-                        Made with 
-                        <div class="languages">
-                            <i class="lab la-html5"></i>
-                            <i class="lab la-sass"></i>
-                            <i class="lab la-js-square"></i>
-                        </div>
-                    </p>
+		<div class="text-center p-3 strip">
+			© <span id="copyright-year"></span> Copyright:
+			<a class="" href="https://nutifafasportfolio.netlify.app/" target="_blank">
+				Nutifafa Afi Attor
+			</a>
+			<p>
+				Made with
+			<div class="languages">
+				<i class="lab la-html5"></i>
+				<i class="lab la-sass"></i>
+				<i class="lab la-js-square"></i>
 			</div>
-		</footer>
+			</p>
+		</div>
+	</footer>
 
-		<script src="/js/app.js"></script>
-	</body>
+	<script src="/js/app.js"></script>
+</body>
+
 </html>
