--- a/trapezoid.html
+++ b/trapezoid.html
@@ -45,6 +45,11 @@
                                         and
                                         <span class="text-primary">d</span> <span class="text-dark">(side)</span>
                                         <span class="text-primary">h</span> <span class="text-dark">(height)</span>
+                                        <br>
+                                        The formula for perimeter is given as <br>
+                                        <strong class="text-primary">P = a + b + c + d</strong>  <br>
+                                        and the formula for area is given as <br>
+                                        <strong class="text-primary">A = ((a + b) / 2) * h</strong> 
                                     </p>
 
                                     <div class="container-fluid row permutation-box">
