--- a/cone.html
+++ b/cone.html
@@ -43,10 +43,10 @@
                                         <span class="text-primary">h</span> <span class="text-dark">(vertical height)</span>,
                                        
                                         <br>
-                                        The formula for circumference is given as <br>
+                                        The formula for Total Surface Area is given as <br>
                                         <strong class="text-primary">TSA = &pi; r  l</strong>  <br>
-                                        and the formula for area is given as <br>
-                                        <strong class="text-primary">A = &pi; r <sup>2</sup></strong> 
+                                        and the formula for volume is given as <br>
+                                        <strong class="text-primary">V = &pi;  r <sup>2</sup> (h / 3)</strong> 
                                     </p>
 
                                     <div class="container-fluid row permutation-box">
